src/exptexParser.java
// Generated from exptex.g4 by ANTLR 4.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class exptexParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__15=1, T__14=2, T__13=3, T__12=4, T__11=5, T__10=6, T__9=7, T__8=8, 
		T__7=9, T__6=10, T__5=11, T__4=12, T__3=13, T__2=14, T__1=15, T__0=16, 
		SUM=17, FOR=18, CHOOSE=19, FROM=20, PROD=21, TO=22, LIMIT=23, AS=24, PROB=25, 
		OVER=26, OF=27, MOD=28, XOR=29, FUNC=30, ID=31, SPACE=32, CR=33, NEWLINE=34, 
		NUM=35, STRING=36, DIVDIV=37, DIV=38, MATH_SYMBOL=39, DOT_DOT=40;
	public static final String[] tokenNames = {
		"<INVALID>", "']'", "'%'", "'^'", "')'", "'_'", "'+'", "'['", "'*'", "'-'", 
		"'('", "'@'", "'''", "'{'", "'#'", "'}'", "'|'", "'sum'", "'for'", "'choose'", 
		"'from'", "'prod'", "'to'", "'limit'", "'as'", "'prob'", "'over'", "'of'", 
		"'mod'", "'xor'", "FUNC", "ID", "SPACE", "CR", "NEWLINE", "NUM", "STRING", 
		"'//'", "'/'", "MATH_SYMBOL", "'..'"
	};
	public static final int
		RULE_lol = 0, RULE_ent = 1, RULE_expr = 2, RULE_single_expr = 3, RULE_align = 4, 
		RULE_addexpr = 5, RULE_multexpr = 6, RULE_term = 7, RULE_power = 8, RULE_atom = 9, 
		RULE_choose = 10, RULE_sum = 11, RULE_prod = 12, RULE_probover = 13, RULE_lim = 14, 
		RULE_start = 15;
	public static final String[] ruleNames = {
		"lol", "ent", "expr", "single_expr", "align", "addexpr", "multexpr", "term", 
		"power", "atom", "choose", "sum", "prod", "probover", "lim", "start"
	};

	@Override
	public String getGrammarFileName() { return "exptex.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public exptexParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class LolContext extends ParserRuleContext {
		public LolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lol; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptexListener ) ((exptexListener)listener).enterLol(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptexListener ) ((exptexListener)listener).exitLol(this);
		}
	}

	public final LolContext lol() throws RecognitionException {
		LolContext _localctx = new LolContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_lol);
		try {
			enterOuterAlt(_localctx, 1);
			{
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntContext extends ParserRuleContext {
		public Expr value;
		public Token ID;
		public Token NUM;
		public Token STRING;
		public Token FUNC;
		public TerminalNode ID() { return getToken(exptexParser.ID, 0); }
		public TerminalNode FUNC() { return getToken(exptexParser.FUNC, 0); }
		public TerminalNode NUM() { return getToken(exptexParser.NUM, 0); }
		public TerminalNode STRING() { return getToken(exptexParser.STRING, 0); }
		public EntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptexListener ) ((exptexListener)listener).enterEnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptexListener ) ((exptexListener)listener).exitEnt(this);
		}
	}

	public final EntContext ent() throws RecognitionException {
		EntContext _localctx = new EntContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ent);
		((EntContext)_localctx).value =  new Expr();
		try {
			setState(48);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(34); ((EntContext)_localctx).ID = match(ID);
				_localctx.value.set(ExpTexUtils.id((((EntContext)_localctx).ID!=null?((EntContext)_localctx).ID.getText():null)));
				}
				break;
			case NUM:
				enterOuterAlt(_localctx, 2);
				{
				setState(36); ((EntContext)_localctx).NUM = match(NUM);
				_localctx.value.atomic((((EntContext)_localctx).NUM!=null?((EntContext)_localctx).NUM.getText():null));
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(38); ((EntContext)_localctx).STRING = match(STRING);
				_localctx.value.atomic((((EntContext)_localctx).STRING!=null?((EntContext)_localctx).STRING.getText():null).substring(1, (((EntContext)_localctx).STRING!=null?((EntContext)_localctx).STRING.getText():null).length()-1)); 
				}
				break;
			case FUNC:
				enterOuterAlt(_localctx, 4);
				{
				setState(40); ((EntContext)_localctx).FUNC = match(FUNC);
				_localctx.value.atomic(ExpTexUtils.func((((EntContext)_localctx).FUNC!=null?((EntContext)_localctx).FUNC.getText():null)));
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 5);
				{
				setState(42); match(11);
				setState(43); ((EntContext)_localctx).ID = match(ID);
				_localctx.value.set("\\mathsf{"+ExpTexUtils.id((((EntContext)_localctx).ID!=null?((EntContext)_localctx).ID.getText():null))+"}");
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 6);
				{
				setState(45); match(14);
				setState(46); ((EntContext)_localctx).ID = match(ID);
				_localctx.value.set("\\mathbb{"+ExpTexUtils.id((((EntContext)_localctx).ID!=null?((EntContext)_localctx).ID.getText():null))+"}");
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public Expr value;
		public Token MATH_SYMBOL;
		public Single_exprContext single_expr;
		public List<TerminalNode> MATH_SYMBOL() { return getTokens(exptexParser.MATH_SYMBOL); }
		public TerminalNode MATH_SYMBOL(int i) {
			return getToken(exptexParser.MATH_SYMBOL, i);
		}
		public Single_exprContext single_expr(int i) {
			return getRuleContext(Single_exprContext.class,i);
		}
		public List<Single_exprContext> single_expr() {
			return getRuleContexts(Single_exprContext.class);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptexListener ) ((exptexListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptexListener ) ((exptexListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr);
		((ExprContext)_localctx).value =  new Expr(); boolean first = true;boolean one = true;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(55); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			do {
				switch (_alt) {
				case 1:
					{
					setState(55);
					switch (_input.LA(1)) {
					case MATH_SYMBOL:
						{
						setState(50); ((ExprContext)_localctx).MATH_SYMBOL = match(MATH_SYMBOL);
						_localctx.value.append(ExpTexUtils.symbolToLaTeX((((ExprContext)_localctx).MATH_SYMBOL!=null?((ExprContext)_localctx).MATH_SYMBOL.getText():null))); first = false; one = false;
						}
						break;
					case 9:
					case 10:
					case 11:
					case 13:
					case 14:
					case SUM:
					case PROD:
					case LIMIT:
					case PROB:
					case FUNC:
					case ID:
					case NUM:
					case STRING:
						{
						setState(52); ((ExprContext)_localctx).single_expr = single_expr();
						if (first)
						                   { _localctx.value.inherit(((ExprContext)_localctx).single_expr.value); first = false;}
						                   else
						                   { if (one) { _localctx.value.set(_localctx.value.flatten(false)); }
						                     _localctx.value.append(((ExprContext)_localctx).single_expr.value.flatten(false)); 
						                     one = false;}
						                   
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(57); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=-1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Single_exprContext extends ParserRuleContext {
		public Expr value;
		public SumContext sum;
		public ProdContext prod;
		public ProboverContext probover;
		public LimContext lim;
		public AddexprContext addexpr;
		public LimContext lim() {
			return getRuleContext(LimContext.class,0);
		}
		public SumContext sum() {
			return getRuleContext(SumContext.class,0);
		}
		public AddexprContext addexpr() {
			return getRuleContext(AddexprContext.class,0);
		}
		public ProboverContext probover() {
			return getRuleContext(ProboverContext.class,0);
		}
		public ProdContext prod() {
			return getRuleContext(ProdContext.class,0);
		}
		public Single_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_single_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptexListener ) ((exptexListener)listener).enterSingle_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptexListener ) ((exptexListener)listener).exitSingle_expr(this);
		}
	}

	public final Single_exprContext single_expr() throws RecognitionException {
		Single_exprContext _localctx = new Single_exprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_single_expr);
		((Single_exprContext)_localctx).value =  new Expr();
		try {
			setState(74);
			switch (_input.LA(1)) {
			case SUM:
				enterOuterAlt(_localctx, 1);
				{
				setState(59); ((Single_exprContext)_localctx).sum = sum();
				_localctx.value.inherit(((Single_exprContext)_localctx).sum.value);
				}
				break;
			case PROD:
				enterOuterAlt(_localctx, 2);
				{
				setState(62); ((Single_exprContext)_localctx).prod = prod();
				_localctx.value.inherit(((Single_exprContext)_localctx).prod.value);
				}
				break;
			case PROB:
				enterOuterAlt(_localctx, 3);
				{
				setState(65); ((Single_exprContext)_localctx).probover = probover();
				_localctx.value.inherit(((Single_exprContext)_localctx).probover.value);
				}
				break;
			case LIMIT:
				enterOuterAlt(_localctx, 4);
				{
				setState(68); ((Single_exprContext)_localctx).lim = lim();
				_localctx.value.inherit(((Single_exprContext)_localctx).lim.value);
				}
				break;
			case 9:
			case 10:
			case 11:
			case 13:
			case 14:
			case FUNC:
			case ID:
			case NUM:
			case STRING:
				enterOuterAlt(_localctx, 5);
				{
				setState(71); ((Single_exprContext)_localctx).addexpr = addexpr();
				_localctx.value.inherit(((Single_exprContext)_localctx).addexpr.value);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlignContext extends ParserRuleContext {
		public String value;
		public Single_exprContext single_expr;
		public Token MATH_SYMBOL;
		public ExprContext expr;
		public List<TerminalNode> MATH_SYMBOL() { return getTokens(exptexParser.MATH_SYMBOL); }
		public List<TerminalNode> NEWLINE() { return getTokens(exptexParser.NEWLINE); }
		public TerminalNode MATH_SYMBOL(int i) {
			return getToken(exptexParser.MATH_SYMBOL, i);
		}
		public Single_exprContext single_expr(int i) {
			return getRuleContext(Single_exprContext.class,i);
		}
		public List<Single_exprContext> single_expr() {
			return getRuleContexts(Single_exprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode NEWLINE(int i) {
			return getToken(exptexParser.NEWLINE, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public AlignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_align; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptexListener ) ((exptexListener)listener).enterAlign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptexListener ) ((exptexListener)listener).exitAlign(this);
		}
	}

	public final AlignContext align() throws RecognitionException {
		AlignContext _localctx = new AlignContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_align);
		StringBuilder sb = new StringBuilder(); 
		      sb.append("\\begin{align*}\n");
		      
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(77);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 9) | (1L << 10) | (1L << 11) | (1L << 13) | (1L << 14) | (1L << SUM) | (1L << PROD) | (1L << LIMIT) | (1L << PROB) | (1L << FUNC) | (1L << ID) | (1L << NUM) | (1L << STRING))) != 0)) {
					{
					setState(76); ((AlignContext)_localctx).single_expr = single_expr();
					}
				}

				setState(79); ((AlignContext)_localctx).MATH_SYMBOL = match(MATH_SYMBOL);
				}
				break;
			}
			setState(82); ((AlignContext)_localctx).expr = expr();
			if (_localctx.single_expr!=null) sb.append(((AlignContext)_localctx).single_expr.value.flatten(true));if (((AlignContext)_localctx).MATH_SYMBOL != null) sb.append(ExpTexUtils.symbolToLaTeX((((AlignContext)_localctx).MATH_SYMBOL!=null?((AlignContext)_localctx).MATH_SYMBOL.getText():null)));sb.append("{}& ").append(((AlignContext)_localctx).expr.value.flatten(true));
			setState(96); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(84); match(NEWLINE);
					sb.append("\\\\\n");
					setState(89);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 9) | (1L << 10) | (1L << 11) | (1L << 13) | (1L << 14) | (1L << SUM) | (1L << PROD) | (1L << LIMIT) | (1L << PROB) | (1L << FUNC) | (1L << ID) | (1L << NUM) | (1L << STRING))) != 0)) {
						{
						setState(86); ((AlignContext)_localctx).single_expr = single_expr();
						sb.append(((AlignContext)_localctx).single_expr.value.flatten(true));
						}
					}

					setState(91); ((AlignContext)_localctx).MATH_SYMBOL = match(MATH_SYMBOL);
					sb.append(ExpTexUtils.symbolToLaTeX((((AlignContext)_localctx).MATH_SYMBOL!=null?((AlignContext)_localctx).MATH_SYMBOL.getText():null)));
					setState(93); ((AlignContext)_localctx).expr = expr();
					sb.append("{}& ").append(((AlignContext)_localctx).expr.value.flatten(true));
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(98); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			} while ( _alt!=2 && _alt!=-1 );
			((AlignContext)_localctx).value =  sb.toString()+"\\end{align*}";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddexprContext extends ParserRuleContext {
		public Expr value;
		public MultexprContext multexpr;
		public MultexprContext multexpr(int i) {
			return getRuleContext(MultexprContext.class,i);
		}
		public List<TerminalNode> XOR() { return getTokens(exptexParser.XOR); }
		public List<MultexprContext> multexpr() {
			return getRuleContexts(MultexprContext.class);
		}
		public TerminalNode XOR(int i) {
			return getToken(exptexParser.XOR, i);
		}
		public AddexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptexListener ) ((exptexListener)listener).enterAddexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptexListener ) ((exptexListener)listener).exitAddexpr(this);
		}
	}

	public final AddexprContext addexpr() throws RecognitionException {
		AddexprContext _localctx = new AddexprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_addexpr);
		((AddexprContext)_localctx).value =  new Expr(); boolean first = true; char c;
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_la = _input.LA(1);
			if (_la==9) {
				{
				setState(102); match(9);
				_localctx.value.append("-"); first = false;
				}
			}

			setState(106); ((AddexprContext)_localctx).multexpr = multexpr();
			if (first) _localctx.value.inherit(((AddexprContext)_localctx).multexpr.value); else _localctx.value.append(((AddexprContext)_localctx).multexpr.value.flatten(false));
			setState(123);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(116);
					switch (_input.LA(1)) {
					case 6:
						{
						setState(108); match(6);
						c='+';
						}
						break;
					case 9:
						{
						setState(110); match(9);
						c='-';
						}
						break;
					case XOR:
						{
						setState(112); match(XOR);
						c='x';
						}
						break;
					case 16:
						{
						setState(114); match(16);
						c='|';
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(118); ((AddexprContext)_localctx).multexpr = multexpr();
					_localctx.value.composite(ExpTexUtils.opText(c, _localctx.value, ((AddexprContext)_localctx).multexpr.value));
					}
					} 
				}
				setState(125);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultexprContext extends ParserRuleContext {
		public Expr value;
		public TermContext term;
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public MultexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptexListener ) ((exptexListener)listener).enterMultexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptexListener ) ((exptexListener)listener).exitMultexpr(this);
		}
	}

	public final MultexprContext multexpr() throws RecognitionException {
		MultexprContext _localctx = new MultexprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_multexpr);
		((MultexprContext)_localctx).value =  new Expr(); char c; boolean first = true;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(126); ((MultexprContext)_localctx).term = term(0);
			_localctx.value.inherit(((MultexprContext)_localctx).term.value);
			setState(144);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(137);
					switch (_input.LA(1)) {
					case 8:
						{
						setState(128); match(8);
						c='*';
						}
						break;
					case DIV:
						{
						setState(130); match(DIV);
						c='/';
						}
						break;
					case DIVDIV:
						{
						setState(132); match(DIVDIV);
						c='\\';
						}
						break;
					case 2:
						{
						setState(134); match(2);
						c='%';
						}
						break;
					case 10:
					case 11:
					case 13:
					case 14:
					case FUNC:
					case ID:
					case NUM:
					case STRING:
						{
						c=' ';
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(139); ((MultexprContext)_localctx).term = term(0);
					_localctx.value.composite(ExpTexUtils.opText(c, _localctx.value, ((MultexprContext)_localctx).term.value));
					}
					} 
				}
				setState(146);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public int _p;
		public Expr value;
		public PowerContext power;
		public ExprContext expr;
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public PowerContext power() {
			return getRuleContext(PowerContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TermContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof exptexListener ) ((exptexListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof exptexListener ) ((exptexListener)listener).exitTerm(this);
		}
	}

	public final TermContext term(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TermContext _localctx = new TermContext(_ctx, _parentState, _p);
		TermContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, RULE_term);
		((TermContext)_localctx).value =  new Expr();
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(148); ((TermContext)_localctx).power = power();
			_localctx.value.inherit(((TermContext)_localctx).power.value);
			}
			_ctx.stop = _input.LT(-1);
			setState(165);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(163);
					switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
					case 1:
						{
						_localctx = new TermContext(_parentctx, _parentState, _p);
						pushNewRecursionContext(_localctx, _startState, RULE_term);
						setState(151);
						if (!(3 >= _localctx._p)) throw new FailedPredicateException(this, "3 >= $_p");
						setState(152); match(7);
						setState(153); ((TermContext)_localctx).expr = expr();
						setState(154); match(1);
						((TermContext)_localctx).value =  new Expr(); _localctx.value.set('{' + _prevctx.value.flatten(false) + ExpTexUtils.sqBracket(((TermContext)_localctx).expr.value.flatten(true)) + '}');
						}
						break;

					case 2:
						{
						_localctx = new TermContext(_parentctx, _parentState, _p);
						pushNewRecursionContext(_localctx, _startState, RULE_term);
						setState(157);
						if (!(2 >= _localctx._p)) throw new FailedPredicateException(this, "2 >= $_p");
						setState(158); match(10);
						setState(159); ((TermContext)_localctx).expr = expr();
						setState(160); match(4);
						((TermContext)_localctx).value =  new Expr(); _localctx.value.set('{' + _prevctx.value.flatten(false) + ExpTexUtils.bracket(((TermContext)_localctx).expr.value.flatten(true)) + '}');
						}
						break;
					}
					} 
				}
				setState(167);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
